added skills content

--- a/index.html
+++ b/index.html
@@ -57,6 +57,41 @@
                 </div>
             </div>
         </section>
+        <!-- what I do section -->
+        <section class="What-I-do">
+    <h3 class="section-title">What I do</h3>
+    <!-- .skill-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+    <div class="skill-container">
+        <div class="skill">
+            <img src="images/icons/js.png" alt="">
+            <p class="skill-title">Vanilla Javascript</p>
+            <p class="skill-description">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt eos repellendus hic minus aspernatur amet.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/react.png" alt="">
+            <p class="skill-title">React</p>
+            <p class="skill-description">Quas, reiciendis molestias! Temporibus fuga nobis inventore ipsum quidem cupiditate cum incidunt quo enim dignissimos?</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/nodejs.png" alt="">
+            <p class="skill-title">Node JS</p>
+            <p class="skill-description">Sit error, eaque laudantium, doloremque sequi assumenda ipsa quasi autem ab voluptatem velit aut temporibus.</p>
+        </div>
+        <div class="skill">
+            <img src="images/icons/mongo.png" alt="">
+            <p class="skill-title">Mongodb</p>
+            <p class="skill-description">Dolor nobis neque dicta deserunt vitae itaque delectus quidem harum saepe. Optio quidem molestias autem?</p>
+        </div>
+    </div>
+        </section>
+       <!--  resume-section -->
+       <section class="resume">
+        <h3 class="section-title">A summary of My Resume</h3>
+        <div class="resume-content"></div>
+        <div>
+            
+        </div>
+       </section>
     </main>
     <footer>
 
