--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapic.com"><link rel="preconnect" href="https://fonts.fonts.gstatic.com" crossorigin><link href="https://fonts.googleapic.com/css2?family=Open+Sans:ital@0;1&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/portfolio.css">
 
+<script src="https://kit.fontawesome.com/4dd9270939.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
     <header class="header">
@@ -27,7 +29,7 @@
         <h3 class="banner-sub-title">Hi,I am </h3>
         <h1 class="banner-title">Shafayat</h1>
         <p class="banner-discription">I am a graphics desiner and also a junior web developer </p>
-        <button class="btn-primary">Download cv</button>
+        <button class="btn-primary"><i class="fa-solid fa-download"></i>Download cv</button>
         </div> 
         <img src="images/shafayat.png" alt="">
 </div>
@@ -127,7 +129,7 @@
            
         </div>
         <div class="resume-button">
-            <button class="btn-primary">Download |CV</button>
+            <button class="btn-primary"><i class="fa-solid fa-download"></i>Download |CV</button>
         </div>
        </section>
 <!--  contract section -->
